<resources>
    <string name="app_name">Vlog++</string>
    <string name="shequ">社区</string>
    <string name="wode">我的</string>
    <string name="paishe">拍摄</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guanzhu">关注</string>
    <string name="tuijian">推荐</string>
    <string name="huati">话题</string>
    <string name="button">Button</string>
</resources>
