<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/picture_yulan"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/pic"
        android:contentDescription="@string/todo"
        android:padding="1dp"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/photo"/>

        <LinearLayout
            android:id="@+id/words"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/name_and_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/sender_name"
                    android:text="@string/todo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/sending_time"
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:id="@+id/message"
                android:text="@string/tuijian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/like_ping_zhuan"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/like"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:drawableStart="@drawable/like"
            android:text="100"
            android:gravity="center_vertical|right" />

        <TextView
            android:id="@+id/ping"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:drawableStart="@drawable/ping"
            android:text="100"
            android:gravity="center_vertical|right"/>
        <TextView
            android:id="@+id/zhuan"
            android:drawableStart="@drawable/zhuan"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="100"
            android:gravity="center_vertical|right"/>
    </LinearLayout>

</LinearLayout>